testdata/network.json
{
  "autoCreateSubnetworks": true,
  "creationTimestamp": "2017-09-16T07:52:38.876-07:00",
  "description": "Default network for the project",
  "id": "832735270185239641",
  "kind": "compute#network",
  "name": "default",
  "routingConfig": {
    "routingMode": "REGIONAL"
  },
  "selfLink": "projects/test-project/global/networks/default",
  "subnetworks": [
    "projects/test-project/regions/northamerica-northeast1/subnetworks/default",
    "projects/test-project/regions/us-central1/subnetworks/default",
    "projects/test-project/regions/asia-east1/subnetworks/default",
    "projects/test-project/regions/europe-west2/subnetworks/default",
    "projects/test-project/regions/us-west1/subnetworks/default",
    "projects/test-project/regions/us-east4/subnetworks/default",
    "projects/test-project/regions/europe-west1/subnetworks/default",
    "projects/test-project/regions/asia-northeast1/subnetworks/default",
    "projects/test-project/regions/australia-southeast1/subnetworks/default",
    "projects/test-project/regions/europe-west4/subnetworks/default",
    "projects/test-project/regions/us-east1/subnetworks/default",
    "projects/test-project/regions/europe-west3/subnetworks/default",
    "projects/test-project/regions/asia-southeast1/subnetworks/default",
    "projects/test-project/regions/southamerica-east1/subnetworks/default",
    "projects/test-project/regions/asia-south1/subnetworks/default"
  ]
}
